--- a/clearskyalarmconfig.json
+++ b/clearskyalarmconfig.json
@@ -1,6 +1,6 @@
 
 {
-	"debug": true,
+	"debug": false,
 	"starCountThreshold": 1000,
 	"distanceThreshold": 20,
 	"detectionThreshold": 0.55,
@@ -15,9 +15,7 @@
 	"smsPhone": "123456",
 	"smsRegion": "us",
 	"smsMsg": "Clear Skies! Wake TFU!",
-	"telegramAPIKey": "APIKey",
 	"notifySMS": true,
-	"notifyTelegram": false,
 	"notifyBuzzer": false,
 	"notifyDelta": 900
 }
